Closed
Bug 1445860
Opened 7 years ago
Closed 7 years ago
NullPtr crash on setting Identity on RecvOnly Transceiver
Categories
(Core :: WebRTC, defect, P2)
Core
WebRTC
Tracking
()
RESOLVED
FIXED
mozilla61
| Tracking | Status | |
|---|---|---|
| firefox61 | --- | fixed |
People
(Reporter: drno, Assigned: drno)
References
Details
Attachments
(1 file)
STR:
- open https://mozilla.github.io/webrtc-landing/
- tick the "one-way only" box
- click "start"
Result:
#01: RefPtr<mozilla::dom::MediaStreamTrack>::operator->() const[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x1792904]
#02: mozilla::MediaPipelineTransmit::UpdateSinkIdentity_m(mozilla::dom::MediaStreamTrack const*, nsIPrincipal*, mozilla::PeerIdentity const*)[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x17931ef]
#03: mozilla::TransceiverImpl::UpdateSinkIdentity(mozilla::dom::MediaStreamTrack const*, nsIPrincipal*, mozilla::PeerIdentity const*)[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x17fa5b2]
#04: mozilla::PeerConnectionMedia::UpdateSinkIdentity_m(mozilla::dom::MediaStreamTrack const*, nsIPrincipal*, mozilla::PeerIdentity const*)[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x17da2a4]
#05: mozilla::PeerConnectionImpl::SetPeerIdentity(nsTSubstring<char16_t> const&)[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x17d9ec8]
#06: mozilla::PeerConnectionImpl::SetPeerIdentity(nsTSubstring<char16_t> const&, mozilla::ErrorResult&)[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2d358c1]
#07: mozilla::dom::PeerConnectionImplBinding::set_peerIdentity(JSContext*, JS::Handle<JSObject*>, mozilla::PeerConnectionImpl*, JSJitSetterCallArgs)[/Users/nohlmeier/src/mozilla-central/objdir-x86_64-apple/dist/NightlyDebug.app/Contents/MacOS/XUL +0x2d357b4]
| Assignee | ||
Updated•7 years ago
|
Rank: 15
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 3•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8959061 [details]
Bug 1445860: set PeerIdenity only on transmitting Transceivers.
https://reviewboard.mozilla.org/r/227954/#review233772
Attachment #8959061 -
Flags: review?(martin.thomson) → review+
Pushed by drno@ohlmeier.org:
https://hg.mozilla.org/integration/autoland/rev/0665d23d7e87
set PeerIdenity only on transmitting Transceivers. r=mt
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in
before you can comment on or make changes to this bug.
Description
•