Bug 1445860: set PeerIdenity only on transmitting Transceivers. r=mt

MozReview-Commit-ID: 10rKPDwuh9d